--- a/core/slides/slides06_file-formats.qmd
+++ b/core/slides/slides06_file-formats.qmd
@@ -1,7 +1,7 @@
 ---
 title: "File formats"
 engine: jupyter
-date: "2025-01-17"
+date: "2025-01-17 (updated: `r Sys.Date()`)"
 ---
 
 #  File formats  {background-color="#1c191c"}
@@ -57,7 +57,7 @@ What is the meaning of *Schema*? May depend on format.
 
 ## Main file formats
 
-::: {.center}
+::: {.center}ile:///home/boucheron/Documents/IFEBY310/_site/notebooks-listings.html
 
 
 
