--- a/core/slides/slides07_spark-deeper-dive.qmd
+++ b/core/slides/slides07_spark-deeper-dive.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Spark deeper dive"
-date: "2025-01-17"
+date: "2025-01-17 (updated: `r Sys.Date()`)"
 
 engine: jupyter
 jupyter: python3
