--- a/weeks/week-11.qmd
+++ b/weeks/week-11.qmd
@@ -9,8 +9,8 @@ engine: jupyter
 
 ::: {.callout-important}
 
-
--   April the 4th 2025 Sophie Germain 1005 **13h30-15h30**
+- Halle 166E
+- March the 30th 2026  10h45-12h45
 -   {{< fa cal >}} [Calendar](https://edt.math.univ-paris-diderot.fr/#/parcours/mathinfo/m1)
 
 :::
