--- a/core/slides/slides04_sparkl.qmd
+++ b/core/slides/slides04_sparkl.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Spark SQL"
 engine: jupyter
-date: "2025-01-17"
+date: "2025-01-17 (updated: `r Sys.Date()`)"
 
 execute: 
   eval: true
