--- a/weeks/week-6.qmd
+++ b/weeks/week-6.qmd
@@ -8,10 +8,11 @@ draft: false
 
 ::: callout-important
 
-**2 Sessions**
 
--   Thursday 20 February 2025 Olympes de Gouges 358  **10h45-12h45** 
--   Friday 21 February 2025 Sophie Germain 0014 15h45-17h45
+
+- Halle 166E
+- Monday 16 February 2026   10h45-12h45 
+
 -   {{< fa cal >}} [Calendar](https://edt.math.univ-paris-diderot.fr/#/parcours/mathinfo/m1)
 
 :::
