--- a/weeks/week-7.qmd
+++ b/weeks/week-7.qmd
@@ -10,7 +10,8 @@ draft: false
 
 **1 Session**
 
--   Friday 7 March 2025 Sophie Germain 1005 **13h30-15h30**
+-   Halle 166E 
+-   Monday 23 February 2026 10h45-12h45
 -   {{< fa cal >}} [Calendar](https://edt.math.univ-paris-diderot.fr/#/parcours/mathinfo/m1)
 
 :::
