--- a/weeks/week-8.qmd
+++ b/weeks/week-8.qmd
@@ -10,8 +10,9 @@ draft: false
 
 **1 Session**
 
--   Friday 14 March 2025 Sophie Germain 1005 **13h30-15h30**
--   {{< fa cal >}} [Calendar](https://edt.math.univ-paris-diderot.fr/#/parcours/mathinfo/m1)
+- Halle 166E
+- Monday 09 March 2026  10h45-12h45
+- {{< fa cal >}} [Calendar](https://edt.math.univ-paris-diderot.fr/#/parcours/mathinfo/m1)
 
 :::
 
